kubernetes/apache-ofbiz/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: apache-ofbiz
  namespace: legacy-modernization
  labels:
    app: apache-ofbiz
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: apache-ofbiz
